# oleynikov-answer-scoring

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.dvc/: config
commonlit_scoring/: commands.py
commonlit_scoring/configs/: config.yaml
commonlit_scoring/configs/data/: data.yaml
commonlit_scoring/configs/infer/: infer.yaml
commonlit_scoring/configs/logging/: logging.yaml
commonlit_scoring/configs/model/: model.yaml
commonlit_scoring/configs/trainer/: trainer.yaml
commonlit_scoring/data/: datamodule.py  load_data.py
commonlit_scoring/inference/: inference.py
commonlit_scoring/training/: lightning_module.py  train.py
data/: raw.dvc
